--- a/index.css
+++ b/index.css
@@ -127,6 +127,15 @@ body.pointerlock #light {
   cursor: default;
 }
 
+#loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  opacity: 0.5;
+  transform: translate(-50%, -50%);
+  line-height: 1rem;
+}
+
 #renderer {
   position: relative;
   width: 100vw;
