--- a/index.css
+++ b/index.css
@@ -247,6 +247,7 @@ body.pointerlock #ribbon {
   right: 0;
   bottom: 0;
   background: rgba(0, 0, 0, .5);
+  backdrop-filter: blur(5px);
   z-index: 1;
 }
 
